--- a/page1.html
+++ b/page1.html
@@ -41,7 +41,7 @@
     </div>
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">responsive website builder</a></section><section class="mbr-slider mbr-section mbr-section--no-padding carousel slide mbr-after-navbar" data-ride="carousel" data-wrap="true" data-interval="5000" id="slider-11" style="background-color: rgb(255, 255, 255);">
+<section class="engine"><a rel="external" href="https://mobirise.com">simple website builder</a></section><section class="mbr-slider mbr-section mbr-section--no-padding carousel slide mbr-after-navbar" data-ride="carousel" data-wrap="true" data-interval="5000" id="slider-11" style="background-color: rgb(255, 255, 255);">
     <div class="mbr-section__container">
         <div>
             <ol class="carousel-indicators">
